@@ -1,3 +1,8 @@
+20120309
+ - (djm) [openbsd-compat/port-linux.c] bz#1960: fix crash on SELinux 
+   systems where sshd is run in te wrong context. Patch from Sven
+   Vermeulen; ok dtucker@
+
 20120224
  - (dtucker) [audit-bsm.c configure.ac] bug #1968: enable workarounds for BSM
    audit breakage in Solaris 11.  Patch from Magnus Johansson.
